# Hexahedron

./: .gitignore  CMakeLists.txt  cube_mesh.cpp  cube_mesh.h  cube_state.cpp  cube_state.h  main.cpp  math3.h  package-lock.json  package.json  readme.md  renderer.cpp  renderer.h  window_shape.cpp  window_shape.h
.cursor/rules/: cmake-ide-build-no-routine-terminal.mdc
